<resources>
    <string name="app_name">My_Test_Application</string>
    <string name="bottom_sheet_behavior1">Переключатель</string>
    <string name="bottom_sheet_behavior2">Результат</string>
    <string name="bottom_sheet_behavior3">Сравнить числа</string>
    <string name="Word1">введи слово</string>
    <string name="digit1">введи число</string>
    <string name="digit2">введи число</string>
    <string name="bottom_sheet_behavior4">Очистить</string>
    <string name="switch1">Выкл</string>
    <string name="switch2">Вкл</string>
</resources>