<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/input_first_digit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digit1" />

    <EditText
        android:id="@+id/input_second_digit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digit2" />

    <Button
        android:id="@+id/btn_compare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/bottom_sheet_behavior3" />

    <TextView
        android:id="@+id/text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        tools:text="@string/bottom_sheet_behavior2" />
    <Switch

        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:showText="true"
        android:text="@string/bottom_sheet_behavior1"
        android:textOff="@string/switch1"
        android:textOn="@string/switch2"
        android:thumb="@drawable/switch1"
    />
</LinearLayout>